--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.html
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.html
@@ -114,7 +114,7 @@
   <section class="ets">
     <div class="comments-block">
       <section class="comments">
-        <app-users-comments *ngIf="user" [userData]="user"></app-users-comments>
+        <app-users-comments *ngIf="user" [userData]="user" [userRole]="userRole"></app-users-comments>
       </section>
       <section class="achives" *ngIf="this.user.role_id === 1">
         <app-freelacer-achives *ngIf="user" [userData]="user"></app-freelacer-achives>
