--- a/src/app/dashboard-page/dashboard-pages/finance-page/components/user-finances/user-finances.component.html
+++ b/src/app/dashboard-page/dashboard-pages/finance-page/components/user-finances/user-finances.component.html
@@ -13,15 +13,15 @@
             <p class="title">&#32; {{ el.name }}</p>
           </div>
         </div>
-  
+
         <div class="balance balance-copy laptop">
           <div class="icon"><img src="/assets/images/icons/finance/current.png" alt=""></div>
           <div class="data">
             <p class="value"><span>{{ userFinance.purse.summ }}</span> UAH</p>
             <p class="title">&#32; состояние счета</p>
           </div>
-        </div>  
-  
+        </div>
+
       </section>
       <section class="graphics">
         <div class="graphic">
@@ -44,29 +44,8 @@
         <div class="title">
           <span>история платежей</span>  <span class="open" (click)="unrollPaymentsList()"></span>
         </div>
-        <div class="paymenst-list">
-          <div class="title">
-            <span class="name">от кого</span>
-            <span class="date">Дата операции</span>
-            <span class="service">Услуга</span>
-            <span class="cash">Сумма</span>
-          </div>
-          <div class="payment-items">
-            <div class="item" *ngFor="let payment of userCashMoves">
-              <div class="name">
-                <div class="ava">
-                  <img [src]="payment.user.avatar" alt="">
-                </div>
-                <span> {{ payment.user.name + ' ' +   payment.user.surname }}</span>
-              </div>
-              <div class="date">{{ payment.created_at | dateFormatPipe: 'dd.MM.yyyy' }}</div>
-              <div class="service">{{ payment.OffersTitle }}</div>
-              <div class="cash"><span [ngClass]="{ output: payment.income === 0 }">
-                  {{ payment.amount }}
-                </span> UAH</div>
-            </div>
-          </div>
-        </div>
+<!-- Paymants-history -->
+      <app-payment-history *ngIf="userFinance" [userFinance]="userFinance"></app-payment-history>
       </section>
       <div class="wallet wallet-section-copy laptop">
         <div class="wallet-section ">
@@ -90,10 +69,10 @@
                   <input [(ngModel)]="transactions.amount" id="count" type="text"><label for="count">
                     <span>UAH</span></label>
                 </div>
-    
+
               </div>
-    
-    
+
+
               <div class="password">
                 <p>ваш пароль</p>
                 <input type="password" [(ngModel)]="transactions.password">
@@ -102,7 +81,7 @@
               <div class="w-p"></div>
             </div>
           </div>
-    
+
         </div>
       </div>
     </div>
@@ -135,10 +114,10 @@
                 <input [(ngModel)]="transactions.amount" id="count" type="text"><label for="count">
                   <span>UAH</span></label>
               </div>
-  
+
             </div>
-  
-  
+
+
             <div class="password">
               <p>ваш пароль</p>
               <input type="password" [(ngModel)]="transactions.password">
@@ -147,7 +126,7 @@
             <div class="w-p"></div>
           </div>
         </div>
-  
+
       </div>
     </div>
   </div>
