--- a/src/app/home-page/home-page-support/home-page-support.component.scss
+++ b/src/app/home-page/home-page-support/home-page-support.component.scss
@@ -94,3 +94,19 @@
     }
   }
 }
+
+@media (max-width: 767.98px) {
+  .wrapper{
+    flex-direction: column-reverse;
+    padding: 20px 15px 70px;
+    overflow: hidden;
+  }
+  .main-info{
+    width: 100%;
+    position: relative;
+  }
+  .personal-wrapper{
+    width: 100%;
+    min-height: 350px;
+  }
+}
