--- a/src/app/home-page/home-page-advantages/home-page-advantages.component.scss
+++ b/src/app/home-page/home-page-advantages/home-page-advantages.component.scss
@@ -181,6 +181,7 @@
     font-size: 22px;
     line-height: 28px;
     letter-spacing: -0.016em;
+    font-weight: 600;
     margin: 0;
     white-space: nowrap;
   }
@@ -364,6 +365,135 @@
   }
 }
 
-// @media (max-width: 1499px) {
+@media (max-width: 767.98px) {
+  .wrapper {
+    flex-wrap: wrap;
+    &>div {
+      margin-top: 0;
+    }
+  }
+  .main-info {
+    width: 100%;
+    &__text {
+      font-size: 14px;
+      line-height: 20px;
+      max-width: none;
+      margin: 0 0 5px;
+    }
 
-// }
+    &__wrap {
+      padding: 10px 0;
+      position: inherit;
+      top: auto;
+      left: auto;
+      width: auto;
+      &::before {
+        top: 100%;
+        left: 25%;
+        width: 250px;
+        height: 250px;
+        max-width: 250px;
+        max-height: 250px;
+        border-radius: 60px;
+      }
+
+      &::after {
+        top: -10%;
+        left: 0%;
+        width: 76px;
+        height: 88px;
+        background-size: contain;
+      }
+    }
+
+    .section__subtitle {
+      margin: 0 0 10px;
+    }
+
+    .section__title {
+      margin: 0 0 22px;
+    }
+
+    .main-info__text{
+      margin: 0;
+    }
+
+    .btn{
+      display: none;
+    }
+  }
+  .features{
+    flex-direction: column;
+    width: 100%;
+    &-column{
+      &:first-child{
+        bottom: 0;
+      }
+      &:last-child{
+        margin-bottom: 30px;
+      }
+    }
+  }
+  .features-item {
+    margin: 0;
+    padding: 21px 21px 11px;
+    justify-content: flex-start;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    max-height: none;
+
+    &__top {
+      margin: 0 0 11px;
+      position: relative;
+      &::before{
+        content: '';
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%) rotate(0deg);
+        height: 10px;
+        width: 13px;
+        background-image: url(/assets/images/home-page/shevron-blue.svg);
+        background-size: contain;
+        transition: all .5s ease-out;
+      }
+    }
+    &__wrapper{
+      width: 275px;
+      height: auto;
+      max-height: 165px;
+      margin: 8px 0;
+      transition: all .5s ease-out;
+      &.openTab{
+        .features-item__text{
+          max-height: 82px;
+          height: 100%;
+          padding-bottom: 10px;
+        }
+        .features-item__top{
+          &::before{
+            transform: translateY(-50%) rotate(180deg);
+          }
+        }
+      }
+      &::before{
+        display: none;
+      }
+      &:hover{  
+        .features-item{
+          transform: none;
+        }
+        &::before{
+            display: none;
+        }
+      }
+    }
+    &__text{
+      height: 0;
+      max-height: 0;
+      overflow: hidden;
+      transition: all .5s ease-out;
+    }
+  }
+}
