--- a/src/app/home-page/home-page-find-specialist/home-page-find-specialist.component.scss
+++ b/src/app/home-page/home-page-find-specialist/home-page-find-specialist.component.scss
@@ -49,6 +49,7 @@
         font-size: 22px;
         line-height: 28px;
         color: #323C47;
+        font-weight: 600;
     }
     &__text{
         font-size: 18px;
@@ -159,4 +160,34 @@
         }
     }
 }
-@media (max-width: 767.98px) {}
+@media (max-width: 767.98px) {
+    .wrapper{
+        padding: 10px 15px 20px;
+    }
+    .freelancer-item{
+        width: 100%;
+        max-width: 240px;
+        margin: 0 15px 25px;
+        padding: 21px 10px 20px 19px;
+        &__top{
+            align-items: center;
+        }
+
+        &__title{
+            font-size: 13px;
+            line-height: 15px;
+        }
+        &__text{
+            font-size: 13px;
+            line-height: 16px;
+            margin-left: 0;
+        }
+    }
+    .freelancer-list{
+        margin: 0;
+        justify-content: center;
+        &::after{
+            display: none;
+        }
+    }
+}
