--- a/src/app/home-page/home-page-search/home-page-search.component.scss
+++ b/src/app/home-page/home-page-search/home-page-search.component.scss
@@ -75,7 +75,6 @@
     margin: 0 0 44px;
   }
 }
-
 @media (max-width: 1199.98px) {
   .section-subtitle {
     font-size: 10px;
@@ -88,5 +87,21 @@
     font-size: 24px;
     line-height: 119.2%;
     margin: 0 0 26px;
+  }
+}
+@media (max-width: 767.98px) {
+  .section-subtitle{
+    font-size: 10px;
+    line-height: 13px;
+    margin: 0 0 10px;
+    text-align: center;
+  }
+  .section-title{
+    font-size: 18px;
+    line-height: 119.2%;
+    margin: 0 0 20px;
+  }
+  .btn{
+    padding: 13px 34px;
   }
 }
