--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -628,3 +628,124 @@ h1 {
     }
   }
 }
+
+@media (max-width: 767.98px) {
+  :host::ng-deep {
+    .wrapper{
+      max-width: 420px;
+      width: 100%;
+      padding: 0 15px;
+    }
+    .section__subtitle{
+      font-size: 10px;
+      line-height: 13px;
+      margin: 0 0 10px;
+    }
+    .section__title{
+      font-size: 24px;
+      line-height: 30px;
+      margin: 0 0 22px;
+    }
+  }
+  .search{
+    height: 280px;
+    &::after{
+      display: none;
+    }
+    &::before{
+      display: none;
+    }
+  }
+  .advantages{
+    height: auto;
+  }
+  .how-work{
+    padding: 30px 0 30px;
+  }
+  .question{
+    padding-bottom: 50px;
+  }
+  .app-news{
+    padding: 40px 0 40px;
+    overflow: hidden;
+  }
+  .get-start{
+    flex-direction: column;
+    padding: 40px 0;
+    .wrapper{
+      &::after {
+        display: none;
+      }
+    }
+    &__wrap{
+      flex-direction: column;
+      .top{
+        width: 100%;
+      }
+    } 
+    &__title{
+      margin: 0 auto 5px;
+      width: max-content;
+      text-align: center;
+    }
+    &__text{
+      text-align: center;
+      margin-bottom: 16px;
+    }
+    .btn{
+      padding: 13px 35px;
+    }
+  }
+  .footer{
+    height: auto;
+    &::after{
+      display: none;
+    }
+    &::before{
+      display: none;
+    }
+    .column{
+      width: 100%;
+      &-title{
+        font-size: 16px;
+        line-height: 20px;
+        margin: 0 0 15px;
+      }
+      &-item{
+        font-size: 14px;
+        line-height: 18px;
+      }
+      .column{
+        &.column-info{
+          width: 100%;
+          order: 4;
+          justify-content: center;
+          align-items: center;
+          h4, p{
+            text-align: center;
+          }
+        }
+        &:nth-child(1){
+          margin-right: auto;
+          width: 100%;
+        }
+        &:nth-child(2){
+          width: 100%;
+        }
+        &:nth-child(3){
+          width: 100%;
+        }
+        &:nth-child(4){
+          width: 100%;
+        }
+      }
+    }
+    .copyright{
+      font-size: 13px;
+      line-height: 16px;
+    }
+    .arrows{
+      display: none;
+    }
+  }
+}
