--- a/src/app/home-page/home-page-how-work/home-page-how-work.component.scss
+++ b/src/app/home-page/home-page-how-work/home-page-how-work.component.scss
@@ -572,6 +572,7 @@
           outline: none;
           margin: 0 15px;
           transition: all .3s;
+          
         &::before {
           content: '';
           position: absolute;
@@ -583,6 +584,8 @@
           background-image: url(/assets/images/home-page/shevron-blue.svg);
           background-size: contain;
           transition: all .5s ease-out;
+          background-repeat: no-repeat;
+          background-position: center;
         }
         &.left{
           &::before {
@@ -610,6 +613,7 @@
     &-number {
       margin-right: 0;
       margin-bottom: 10px;
+      margin-left: 6px;
     }
 
     &-text {
