--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <header>
-<!-- <app-main-header></app-main-header> -->
+<app-main-header></app-main-header>
 </header>
 <div class="wrapper"></div>
 <section class="search">
