--- a/src/app/shared/modules/main-header/main-header.component.html
+++ b/src/app/shared/modules/main-header/main-header.component.html
@@ -1,5 +1,37 @@
 <div class="wrapper">
   <div class="container">
+
+    <div class="hamburger-menu" [ngClass]="{open: hamburgerMenu}">
+      <label class="menu__btn" (click)="toggleHamburgerMenu()">
+        <span></span>
+      </label>
+
+      <div class="blur-block" (click)="toggleHamburgerMenu()"></div>
+      <div class="mobile-menu">
+        <div class="login-block" *ngIf="!token">
+          <div >
+            <div class="login">
+              <a [routerLink]="'/auth' | localize" [queryParams]="{type: 'signin'}" role="button">Вход</a>
+            </div>
+            <a class="registrate" [routerLink]="'/auth' | localize" [queryParams]="{type: 'signup'}" role="button">Зарегистрироваться</a>
+          </div>
+        </div>
+        <nav *ngIf="pageName !== 'authoriz'">
+          <a [routerLink]="''">{{'header.how_it_works' | translate}}</a>
+          <a [routerLink]="['/catalog'] | localize">Каталог</a>
+          <a [routerLink]="''">Проэкты</a>
+        </nav>
+        <div class="languages" >
+          <button class="toggle-list" (click)='showLangList()' [ngClass]="{active: langList}">Изменить язык</button>
+          <ul class="lang-list" [ngClass]="{open: langList}">
+            <li>Украинский</li>
+            <li>Русский</li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
+
     <div class="menu">
       <div class="logo">
         <!-- <a [routerLink]="'' | localize"> <img src="assets/images/logo.svg" alt=""></a> -->
