--- a/src/app/shared/modules/user-header-menu/user-header-menu.component.scss
+++ b/src/app/shared/modules/user-header-menu/user-header-menu.component.scss
@@ -61,3 +61,15 @@
     }
   }
 }
+
+@media (max-width: 767.98px) {
+  .user-menu span{
+    display: none;
+  }
+  .menu.open{
+    display: block;
+    min-width: 150px;
+    right: -15px;
+    top: 45px;
+  }
+}
