dashboard, home-page pravki

--- a/src/app/chat/components/collocutors-list/collocutor-list.component.scss
+++ b/src/app/chat/components/collocutors-list/collocutor-list.component.scss
@@ -130,11 +130,16 @@
 
     .photo {
       margin-right: 20px;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      overflow: hidden;
 
       img {
-        width: 40px;
-        height: 40px;
         border-radius: 50%;
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
       }
     }
 
