--- a/src/app/chat/components/message-list/message-list.component.scss
+++ b/src/app/chat/components/message-list/message-list.component.scss
@@ -103,9 +103,9 @@
         border-radius: 50%;
         margin-right: 20px;
         img {
-            width: 130%;
-            height: auto;
-            min-height: 40px;
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
         }
     }
     .time {
