--- a/src/app/dashboard-page/dashboard-page.component.scss
+++ b/src/app/dashboard-page/dashboard-page.component.scss
@@ -137,7 +137,6 @@
 .notifications {
   margin-right: 30px;
   position: relative;
-
   mat-icon {
     color: #fff;
 
@@ -212,11 +211,17 @@
       z-index: -1;
     }
 
-    img {
+    &-wrapper{
       width: 107px;
       height: 107px;
       border-radius: 50%;
       margin-bottom: 8px;
+      overflow: hidden;
+      img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+      }
     }
   }
 
@@ -485,14 +490,18 @@
           font-size: 26px;
         }
         span {
-          font-size: 14px;
           line-height: 18px;
+          font-size: 12px; 
+          letter-spacing: 0.6px;
           margin-bottom: 12px;
         }
         &.chat {
           &:after {
-            width: 34px;
-            height: 26px;
+            width: 26px;
+            height: 21px;
+          }
+          &:before{
+            font-size: 20px;
           }
         }
         // .newMessage:not(.active)
@@ -523,10 +532,10 @@
     z-index: 7;
     transition: all .3s ease-out;
     .avatar {
-      img{
-        margin-top: 45px;
-        transition: all .3s ease-out;
-      }
+      // img{
+      //   margin-top: 45px;
+      //   transition: all .3s ease-out;
+      // }
       .name, .rating{
         transition: all .3s ease-out;
       }
@@ -572,7 +581,7 @@
         min-height: 210px;
         height: 210px;
         transition: all .3s ease-out;
-        img{
+        .avatar-wrapper{
           width: 40px;
           height: 40px;
           margin: 40px 0 0;
