--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.scss
@@ -46,6 +46,13 @@
         font-weight: normal;
         margin-top: 8px;
       }
+      &.inline{
+        display: inline-block;
+      }
+    }
+    span{
+      display: inline-block;
+      padding-left: 6px;
     }
   }
 }
@@ -205,7 +212,7 @@
       .legend {
         display: flex;
         align-items: center;
-        margin-left: 43px;
+        margin: 10px 0 10px 43px;
         span{
           &:last-child {
             margin-left: 16px;
@@ -588,7 +595,7 @@
         top: 0;
         right: 17px;
         width: auto;
-        min-width: 330px;
+        min-width: 315px;
         height: 46px;
 
         button{
@@ -622,14 +629,14 @@
             }
           }
           &:last-of-type{
-            padding: 0 20px;
+            padding: 0 10px;
           }
         }
       }
     }
     .statistic {
       margin-top: 53px;
-      min-width: 330px;
+      min-width: 315px;
       width: auto;
       margin-right: 17px;
       h5 {
