--- a/src/app/shared/modules/main-header/main-header.component.scss
+++ b/src/app/shared/modules/main-header/main-header.component.scss
@@ -13,7 +13,7 @@
     margin: auto;
     justify-content: space-between;
     // padding-top: 24px;
-    padding: 5px 0;
+    padding: 5px 15px;
     max-width: 1493px;
   }
 }
@@ -114,6 +114,16 @@ nav {
   }
 }
 
+@media (max-width: 1199.98px) {
+  nav {
+    a {
+      font-size: 14px;
+      line-height: 16px;
+      margin: 0 13px;
+    }
+  }
+}
+
 @media (max-width: 767.98px) {
   .wrapper {
     max-width: none;
@@ -121,10 +131,11 @@ nav {
       padding: 0 0;
     }
   }
+  .logo{
+    margin-right: 0;
+  }
   .menu{
-    nav{
-      display: none;
-    }
+    display: none;
   }
   .auth .registrate{
     display: none;
@@ -161,7 +172,7 @@ nav {
         position: absolute;
         width: 100%;
         height: 2px;
-        background-color: #616161;
+        background-color: #3C7EEA;
         transition-duration: .25s;
       }
       span::before {
