--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,7 @@
 <header>
 <app-main-header></app-main-header>
 </header>
+<app-categories-header></app-categories-header>
 <div class="wrapper"></div>
 <section class="search">
     <app-home-page-search></app-home-page-search>
